--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,10 +1,14 @@
 version: 3
 
-tasks:
-  build:
-    cmds:
+tasks: 
+  build: 
+    cmds: 
       - go build ./cmd/hanconv
 
-  install:
-    cmds:
+  install: 
+    cmds: 
       - go install ./cmd/hanconv
+
+  gen: 
+    cmds: 
+      - go run ./tools/gen
