refactor: add pkg/cmd

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,7 +6,7 @@ tasks:
       GOOS: windows
       GOARCH: amd64
     cmds: 
-      - go build ./cmd/gocc
+      - go build -o ./bin/ ./cmd/...
 
   build:
     deps:
