--- a/.github/workflows/build-go.yaml
+++ b/.github/workflows/build-go.yaml
@@ -1,10 +1,14 @@
-name: Build
+name: Build Go hanconv
 
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'go/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'go/**'
 
 jobs:
   build:
@@ -18,7 +22,7 @@ jobs:
           go-version: 'stable'
 
       - name: Set up Task
-        run: go install github.com/go-task/task/v3/cmd/task@latest
+        uses: arduino/setup-task@v2
 
       - name: Build
-        run: task build
+        run: task go:build
