--- a/crates/hanconv/Cargo.toml
+++ b/crates/hanconv/Cargo.toml
@@ -8,5 +8,5 @@ repository = "https://github.com/fhluo/hanconv"
 license = "MIT"
 
 [dependencies]
-trie = { path = "../trie", version = "0.1.0" }
+ahash = "0.8"
 clap = { version = "4.5", features = ["derive"] }
