--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,18 +1,14 @@
-name: Build Go hanconv
+name: Build
 
 on:
   push:
     branches: [ "main" ]
-    paths:
-      - 'go/**'
   pull_request:
     branches: [ "main" ]
-    paths:
-      - 'go/**'
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -21,8 +17,13 @@ jobs:
         with:
           go-version: 'stable'
 
+      - name: Set up Rust
+        run: rustup default stable
+
       - name: Set up Task
-        uses: arduino/setup-task@v2
+        run: go install github.com/go-task/task/v3/cmd/task@latest
 
       - name: Build
-        run: task go:build
+        run: |
+          task go:build
+          task cli:build
