ci: use windows-2025 and winget for task installation

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2025
     steps:
       - uses: actions/checkout@v4
 
@@ -21,7 +21,7 @@ jobs:
         run: rustup default stable
 
       - name: Set up Task
-        run: go install github.com/go-task/task/v3/cmd/task@latest
+        run: winget install --id Task.Task
 
       - name: Build
         run: |
