--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,9 @@ jobs:
           rustup update
 
       - name: Set up Task
-        run: winget install --id Task.Task --accept-source-agreements --accept-package-agreements
+        run: |
+          winget install --id Task.Task --accept-source-agreements --accept-package-agreements
+          echo "%LOCALAPPDATA%\Microsoft\WinGet\Links" >> "$GITHUB_PATH"
 
       - name: Build
         run: |
