--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Release
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Task
         run: |
           winget install --id Task.Task --accept-source-agreements --accept-package-agreements
-          echo "%LOCALAPPDATA%\Microsoft\WinGet\Links" >> "$GITHUB_PATH"
+          "$env:LOCALAPPDATA\Microsoft\WinGet\Links" | Out-File -FilePath "$env:GITHUB_PATH" -Append
 
       - name: Build
         run: |
