--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,4 +15,4 @@ tauri = { version = "2", features = ["config-toml"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+hanconv = "0.3"
