--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,3 +16,4 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 hanconv = "0.3"
+window-vibrancy = "0.6"
