--- a/app/Tauri.toml
+++ b/app/Tauri.toml
@@ -12,6 +12,8 @@ frontend-dist = "../web/dist"
 title = "hanconv"
 width = 800
 height = 600
+transparent = true
+theme = "Light"
 
 [bundle]
 active = true
