chore: update Cargo.toml categories and keywords

--- a/crates/hanconv/Cargo.toml
+++ b/crates/hanconv/Cargo.toml
@@ -3,7 +3,8 @@ name = "hanconv"
 version = "0.3.3"
 edition = "2024"
 description = "Convert between Chinese characters variants."
-keywords = ["chinese"]
+categories = ["text-processing", "command-line-utilities"]
+keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
 repository = "https://github.com/fhluo/hanconv"
 license = "MIT"
 exclude = ["Taskfile.yaml"]
