--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
+    "format": "biome format --write ./src"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
@@ -16,6 +17,7 @@
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.20.5",
