--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
-    "format": "biome format --write ./src"
+    "format": "biome format --write"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
