--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@biomejs/biome": "^1.9.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/bun": "^1.2.4",
     "svelte": "^5.20.5",
     "svelte-check": "^4.1.4",
     "typescript": "~5.6.3",
