--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,7 +13,11 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = ["config-toml"] }
 tauri-plugin-opener = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-process = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 hanconv = "0.3"
 window-vibrancy = "0.6"
+
