--- a/web/package.json
+++ b/web/package.json
@@ -11,19 +11,26 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.9",
     "@tauri-apps/api": "^2.3.0",
+    "@tauri-apps/plugin-dialog": "^2.2.0",
+    "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.6",
-    "tailwindcss": "^4.0.9"
+    "@tauri-apps/plugin-process": "^2.2.0",
+    "bits-ui": "^1.3.13"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.14",
+    "tailwindcss": "^4.0.14",
     "@biomejs/biome": "^1.9.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
-    "@types/bun": "^1.2.4",
-    "svelte": "^5.20.5",
-    "svelte-check": "^4.1.4",
+    "@types/bun": "^1.2.5",
+    "overlayscrollbars": "^2.11.1",
+    "overlayscrollbars-svelte": "^0.5.5",
+    "svelte": "~5.21.0",
+    "svelte-check": "^4.1.5",
+    "svelte-language-server": "^0.17.11",
     "typescript": "~5.6.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.2"
   }
 }
