--- a/crates/hanconv/Cargo.toml
+++ b/crates/hanconv/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "hanconv"
-version = "0.3.4"
+version = "0.4.0"
 edition = "2024"
+rust-version = "1.88"
 description = "Convert between Chinese characters variants."
 categories = ["text-processing", "command-line-utilities"]
 keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
