--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -18,6 +18,6 @@ tauri-plugin-fs = "2"
 tauri-plugin-process = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-hanconv = "0.3"
+hanconv = { workspace = true }
 window-vibrancy = "0.6"
 
