chore: update permissions and add plugins

--- a/app/capabilities/default.toml
+++ b/app/capabilities/default.toml
@@ -3,5 +3,7 @@ description = "Capability for the main window"
 windows = ["main"]
 permissions = [
     "core:default",
-    "opener:default"
+    "opener:default",
+    "dialog:allow-open",
+    "dialog:allow-save",
 ]
