--- a/web/package.json
+++ b/web/package.json
@@ -11,26 +11,26 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.7.0",
+    "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "^2.3.2",
     "@tauri-apps/plugin-fs": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2.4.0",
     "@tauri-apps/plugin-process": "^2.3.0",
-    "bits-ui": "^2.9.3"
+    "bits-ui": "^2.9.4"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "tailwindcss": "^4.1.12",
     "@biomejs/biome": "^2.2.0",
-    "@sveltejs/vite-plugin-svelte": "^6.1.2",
+    "@sveltejs/vite-plugin-svelte": "^6.1.3",
     "@tsconfig/svelte": "^5.0.4",
     "@types/bun": "^1.2.20",
     "overlayscrollbars": "^2.11.5",
     "overlayscrollbars-svelte": "^0.5.5",
-    "svelte": "~5.38.1",
+    "svelte": "^5.38.2",
     "svelte-check": "^4.3.1",
     "svelte-language-server": "^0.17.19",
     "typescript": "~5.9.2",
-    "vite": "^7.1.2"
+    "vite": "^7.1.3"
   }
 }
