--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.4", features = [] }
 
 [dependencies]
-tauri = { version = "2.9", features = ["config-toml"] }
+tauri = { version = "2.9", features = ["macos-private-api"] }
 tauri-plugin-opener = "2.5"
 tauri-plugin-dialog = "2.4"
 tauri-plugin-fs = "2.4"
@@ -19,4 +19,4 @@ tauri-plugin-process = "2.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 hanconv = { workspace = true }
-window-vibrancy = "0.6"
+window-vibrancy = "0.7"
