--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,6 +16,7 @@ tauri-plugin-opener = "2.5"
 tauri-plugin-dialog = "2.4"
 tauri-plugin-fs = "2.4"
 tauri-plugin-process = "2.3"
+tauri-plugin-store = "2.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 hanconv = { workspace = true }
