--- a/web/package.json
+++ b/web/package.json
@@ -16,21 +16,22 @@
     "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-process": "^2.3.1",
-    "bits-ui": "^2.14.3"
+    "@tauri-apps/plugin-store": "^2.4.1",
+    "bits-ui": "^2.14.4"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "tailwindcss": "^4.1.17",
-    "@biomejs/biome": "^2.3.5",
+    "@biomejs/biome": "^2.3.7",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.6",
-    "@types/bun": "^1.3.2",
+    "@types/bun": "^1.3.3",
     "overlayscrollbars": "^2.12.0",
     "overlayscrollbars-svelte": "^0.5.5",
-    "svelte": "^5.43.6",
+    "svelte": "^5.43.14",
     "svelte-check": "^4.3.4",
     "svelte-language-server": "^0.17.22",
     "typescript": "~5.9.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.4"
   }
 }
