--- a/web/biome.json
+++ b/web/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.0/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.7/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["./src/**/*.ts", "./src/**/*.css", "*.json", "index.html"]
+    "includes": ["./src/**/*.svelte", "./src/**/*.ts", "./src/**/*.css", "*.json", "index.html"]
   },
   "formatter": {
     "enabled": true,
@@ -41,6 +41,12 @@
       "enabled": true,
       "indentStyle": "space",
       "indentWidth": 2
+    }
+  },
+  "html": {
+    "experimentalFullSupportEnabled": true,
+    "formatter": {
+      "indentScriptAndStyle": true
     }
   },
   "css": {
