--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@lucide/svelte": "^0.554.0",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
