--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -21,3 +21,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 hanconv = { workspace = true }
 window-vibrancy = "0.7"
+encoding_rs = "0.8"
