--- a/web/package.json
+++ b/web/package.json
@@ -11,29 +11,29 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@lucide/svelte": "^0.554.0",
-    "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-store": "^2.4.1",
-    "bits-ui": "^2.14.4"
+    "bits-ui": "^2.14.4",
+    "@lucide/svelte": "^0.561.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.17",
-    "tailwindcss": "^4.1.17",
-    "tw-animate-css": "^1.4.0",
-    "@biomejs/biome": "^2.3.7",
+    "@biomejs/biome": "^2.3.10",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@tsconfig/svelte": "^5.0.6",
-    "@types/bun": "^1.3.3",
-    "overlayscrollbars": "^2.12.0",
+    "@types/bun": "^1.3.4",
+    "overlayscrollbars": "^2.13.0",
     "overlayscrollbars-svelte": "^0.5.5",
-    "svelte": "^5.43.14",
+    "svelte": "^5.46.0",
     "svelte-check": "^4.3.4",
     "svelte-language-server": "^0.17.22",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.3.0"
   }
 }
