--- a/web/package.json
+++ b/web/package.json
@@ -11,14 +11,15 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@lucide/svelte": "^0.562.0",
     "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-store": "^2.4.1",
-    "bits-ui": "^2.14.4",
-    "@lucide/svelte": "^0.562.0"
+    "bits-ui": "^2.14.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
