--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -23,3 +23,5 @@ serde_json = "1"
 hanconv = { workspace = true }
 window-vibrancy = "0.7"
 encoding_rs = "0.8"
+charset-normalizer-rs = "1.1.0"
+thiserror = "2.0"
