chore: update tsconfig resolution and types

--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -14,7 +14,9 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "moduleResolution": "bundler",
+    "types": ["svelte"]
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
