feat: add hanconv-cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "bindings/py",
     "bindings/wasm",
     "crates/hanconv",
+    "crates/hanconv-cli",
 ]
 
 [workspace.dependencies]
