--- a/crates/hanconv-cli/Cargo.toml
+++ b/crates/hanconv-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "hanconv"
-version = "0.4.3"
+name = "hanconv-cli"
+version = "0.5.0"
 edition = "2024"
 rust-version = "1.88"
 description = "Convert between Chinese characters variants."
@@ -10,5 +10,12 @@ repository = "https://github.com/fhluo/hanconv"
 license = "MIT"
 exclude = ["Taskfile.yaml"]
 
+[[bin]]
+name = "hanconv"
+path = "src/main.rs"
+
 [dependencies]
-ahash = "0.8"
+hanconv = "0.4"
+clap = { version = "4.5", features = ["derive"] }
+encoding_rs = "0.8"
+rayon = "1.11"
