--- a/crates/hanconv-app/Cargo.toml
+++ b/crates/hanconv-app/Cargo.toml
@@ -15,4 +15,7 @@ hanconv = "0.5"
 gpui = "0.2"
 gpui-component = "0.5"
 gpui-component-assets = "0.5"
+rust-i18n = "3.1"
+sys-locale = "0.3"
+icu_locale = "2.1"
 anyhow = "1.0"
