--- a/crates/hanconv-app/Cargo.toml
+++ b/crates/hanconv-app/Cargo.toml
@@ -17,5 +17,7 @@ gpui-component = "0.5"
 gpui-component-assets = "0.5"
 rust-i18n = "3.1"
 sys-locale = "0.3"
-icu_locale = { version = "2.1", features = ["compiled_data"] }
+icu_locale = { version = "2.1", features = ["compiled_data", "serde"] }
+confy = { version = "2.0" }
+serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
