--- a/crates/hanconv-app/Taskfile.yaml
+++ b/crates/hanconv-app/Taskfile.yaml
@@ -2,7 +2,7 @@ version: 3
 
 tasks:
   run:
-    cmd: cargo run {{.CLI_ARGS}}
+    cmd: cargo run --release
 
   build:
     cmd: cargo build --release
