--- a/crates/hanconv-app/Cargo.toml
+++ b/crates/hanconv-app/Cargo.toml
@@ -19,6 +19,7 @@ rust-i18n = "3.1"
 sys-locale = "0.3"
 icu_locale = { version = "2.1", features = ["compiled_data", "serde"] }
 confy = { version = "2.0" }
+rust-embed = "8.9"
 serde = { version = "1.0", features = ["derive"] }
 schemars = { version = "1.2", features = ["derive"] }
 anyhow = "1.0"
