--- a/crates/hanconv-app/Cargo.toml
+++ b/crates/hanconv-app/Cargo.toml
@@ -22,4 +22,5 @@ confy = { version = "2.0" }
 rust-embed = "8.9"
 serde = { version = "1.0", features = ["derive"] }
 schemars = { version = "1.2", features = ["derive"] }
+strum = { version = "0.27", features = ["derive"] }
 anyhow = "1.0"
