--- a/crates/hanconv-app/Cargo.toml
+++ b/crates/hanconv-app/Cargo.toml
@@ -12,9 +12,9 @@ exclude = ["Taskfile.yaml"]
 
 [dependencies]
 hanconv = "0.5"
-gpui = "0.2"
-gpui-component = "0.5"
-gpui-component-assets = "0.5"
+gpui = { git = "https://github.com/zed-industries/zed" }
+gpui-component = { git = "https://github.com/longbridge/gpui-component" }
+gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
 rust-i18n = "3.1"
 sys-locale = "0.3"
 icu_locale = { version = "2.1", features = ["compiled_data", "serde"] }
