--- a/crates/hanconv-app/Cargo.toml
+++ b/crates/hanconv-app/Cargo.toml
@@ -20,6 +20,7 @@ sys-locale = "0.3"
 icu_locale = { version = "2.1", features = ["compiled_data", "serde"] }
 confy = { version = "2.0" }
 rust-embed = "8.9"
+dirs = "6.0"
 serde = { version = "1.0", features = ["derive"] }
 schemars = { version = "1.2", features = ["derive"] }
 strum = { version = "0.27", features = ["derive"] }
